# ndev-kit.github.io

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml
BINA_poster/: index.html
beginner_setup/: index.html
docs/: installation.md
docs/tutorial/: 00_setup.md
examples/measure/measure_widget/: index.html
examples/skimage_workflow/: index.html
examples/workflow/workflow_napari-assistant/: index.html
examples/workflow/workflow_scripting/: index.html
examples/workflow/workflow_widget/: index.html
installation/: index.html
search/: search_index.json
tutorial/00_setup/: index.html
tutorial/01_example_pipeline/: index.html
tutorial/02_easy_ML/: index.html
tutorial/03_build_pipeline/: index.html
tutorial/cellpainting/scripting_workflow/: index.html
widget_further_info/: index.html
