[project]
name = "docs"
dynamic = ["version"]
description = "Documentation site for ndev kit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Tim Monko"},
  {email = "timmonko@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"

dependencies = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "mkdocs-pdf",
    "mkdocs-spellcheck[all]",
    "mkdocs-literate-nav",
    "mkdocs-table-reader-plugin",
    "mkdocs-multirepo-plugin",  # For fetching docs from multiple repos
]

[dependency-groups]
dev = [
    "pre-commit",
]

[project.urls]
"Bug Tracker" = "https://github.com/ndev-kit/ndev-kit.github.io/issues"
"Documentation" = "https://github.com/ndev-kit/ndev-kit.github.io#README.md"
"Source Code" = "https://github.com/ndev-kit/ndev-kit.github.io"
"User Support" = "https://github.com/ndev-kit/ndev-kit.github.io/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
docs = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
serve = { cmd = "mkdocs serve" }
build = { cmd = "mkdocs build" }
